1.1.7 - FIX: Display errors when entering CA via CTA FIX: Gifter not showing notification

--- a/css/ca_cage.css
+++ b/css/ca_cage.css
@@ -143,7 +143,7 @@ div.game {
 	width: 738px;
 }
 .results {
-	background-image: url('') !important;
+	background-image: url() !important;
 	border: 0 !important;
 	padding: 5px !important;
 }
