--- a/css/cage.css
+++ b/css/cage.css
@@ -1,3 +1,12 @@
+/*
+ * Fix for entering via CTA links
+ */
+div.imgButton {
+	height: 0;
+}
+/*
+ * 
+ */
 #cageContainer {
 	width: 770px;
 	font-size: 11px;
